[package]
name = "learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
html2md = "0.2.13"

# httpie
anyhow = { version = "1" } # 错误处理
clap = "3.0.0-beta.5" # 命令解析
colored = "2" # 命令终端多彩显示
jsonxf = "1.1" #JSON pretty-print 格式化
mime = "0.3" #处理mime类型
tokio = { version = "1", features = ["full"] } # 异步处理库