[package]
name = "learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
html2md = "0.2.13"

# httpie
anyhow = { version = "1" } # 错误处理
clap = "3.0.0-beta.5" # 命令解析
colored = "2" # 命令终端多彩显示
jsonxf = "1.1" #JSON pretty-print 格式化
mime = "0.3" #处理mime类型
tokio = { version = "1", features = ["full"] } # 异步处理库

#thumbor
axum = "0.2" # web 服务器
base64 = "0.13" # base64 编码/解码
bytes = "1" # 处理字节流
image = "0.23" # 图片处理
lazy_static = "1" # 通过宏更方便初始化静态变量
lru = "0.6" # LRU 缓存
percent-encoding = "2" # URL 编码/解码
photon-rs = "0.3" # 图片效果
prost = "0.8" # protobuf
serde = { version = "1", features = ["derive"] } # 序列化/反序列化
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] } # 服务处理及中间件
tower-http = { version = "0.1", features = ["add-extension", "compression-full", "trace"] } # http 中间件
tracing = "0.1" # 日志追踪
tracing-subscriber = "0.2" # 日志追踪

[build-dependencies]
prost-build = "0.8" # 编译protobuf